# zk-OPML

./: .env.example  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  docker-compose.yml  justfile  kurtosis.yaml  requirements.txt  rust-toolchain.toml
contracts/: Cargo.toml  build.rs
contracts/create2/: package-lock.json
contracts/create2/scripts/: test.sh
contracts/foundry/: remappings.txt
contracts/foundry/lib/sp1-contracts/contracts/deployments/: 1337.json
contracts/foundry/lib/sp1-contracts/contracts/src/v1.0.1/: PlonkVerifier.sol
contracts/foundry/lib/sp1-contracts/contracts/src/v1.2.0/: PlonkVerifier.sol
contracts/foundry/lib/sp1-contracts/contracts/src/v2.0.0/: PlonkVerifier.sol
contracts/foundry/lib/sp1-contracts/contracts/src/v3.0.0/: PlonkVerifier.sol  SP1VerifierPlonk.sol
contracts/foundry/lib/sp1-contracts/contracts/src/v3.0.0-rc1/: PlonkVerifier.sol  SP1VerifierPlonk.sol
contracts/foundry/lib/sp1-contracts/contracts/src/v3.0.0-rc4/: PlonkVerifier.sol  SP1VerifierPlonk.sol
contracts/foundry/src/: FaultProof.sol  ModelRegistry.sol
contracts/foundry/src/interfaces/: IModelRegistry.sol
contracts/foundry/test/: FaultProof.t.sol  ModelRegistry.t.sol
contracts/src/: lib.rs
crates/ml/: Cargo.toml
crates/ml/src/: data.rs  lib.rs  merkle.rs  onnx.rs  utils.rs
crates/zk/: Cargo.toml
crates/zk/src/: main.rs
elf/: riscv32im-succinct-zkvm-elf
notebooks/: ezkl_demo.ipynb
testdata/1d_conv/: README.md
testdata/2d_conv/: README.md  gen.py
testdata/dnn_opml/: README.md  gen.py
testdata/gte/: README.md
testdata/lenet/: README.md  generate_data.py  input.json  output.json
testdata/lenet_5/: README.md
testdata/mobilenet/: README.md
testdata/t5/: README.md  output.txt
testdata/variable_cnn/: README.md  fault_proof.txt  output.txt
testdata/whisper/: README.md
testdata/xg_boost/: README.md
