[workspace]
resolver = "2"
members = ["bin/*", "contracts", "crates/*"]

[workspace.dependencies]
alloy = { version = "0.9.1", features = ["full"] }
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
foundry-compilers = "0.11.0"
futures-util = "0.3"
ipfs-api-backend-hyper = "0.6"
log = "0.4.22"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.39.1", features = ["full"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rs_merkle = "1.4.2"

tract-onnx = { git = "https://github.com/sonos/tract/", rev = "37132e0397d0a73e5bd3a8615d932dabe44f6736", default-features = false }

sp1-build = "3.4.0"
sp1-sdk = "3.4.0"
sp1-zkvm = "3.4.0"

zkopml-contracts = { path = "contracts" }
zkopml-ml = { path = "crates/ml" }

# TODO: uncomment optimizations
# [profile.dev]
# opt-level = 3

[profile.release]
debug = 1
# lto = true
