[workspace]
resolver = "2"
members = ["bin/*", "contracts", "crates/*"]

[workspace.dependencies]
alloy = { version = "0.9.1", features = ["full"] }
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
foundry-compilers = "0.11.0"
futures-util = "0.3"
ipfs-api-backend-hyper = "0.6"
log = "0.4.22"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.39.1", features = ["full"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rs_merkle = "1.4.2"

candle-core = { git = "https://github.com/Vid201/candle/", branch = "feat/onnx_eval_one" }
candle-onnx = { git = "https://github.com/Vid201/candle/", branch = "feat/onnx_eval_one" }

sp1-build = "4.0.0-rc.10"
sp1-sdk = "4.0.0-rc.10"
sp1-zkvm = "4.0.0-rc.10"

zkopml-contracts = { path = "contracts" }
zkopml-ml = { path = "crates/ml" }

# TODO: uncomment optimizations
# [profile.dev]
# opt-level = 3

[profile.release]
debug = 1
# lto = true
