[workspace]
resolver = "2"
members = ["bin/*", "contracts", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/vidkersic/zkopml"
rust-version = "1.88.0"

[workspace.dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
futures-util = "0.3"
log = "0.4.22"
rand = "0.9.0"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ethereum
alloy = { version = "1.0.25", features = ["full"] }
foundry-compilers = "0.18.2"

# ipfs
ipfs-api-backend-hyper = "0.6"

# crypto
rs_merkle = "1.5.0"
sha2 = "0.10.9"

# candle
candle-core = { git = "https://github.com/Vid201/candle/", branch = "feat/onnx_eval_one" }
candle-onnx = { git = "https://github.com/Vid201/candle/", branch = "feat/onnx_eval_one" }

# sp1
sp1-build = "5.2.1"
sp1-sdk = { version = "5.2.1", features = ["profiling"] }
sp1-zkvm = "5.2.1"

# zkopml dependencies
zkopml-contracts = { path = "contracts" }
zkopml-ml = { path = "crates/ml" }

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.10.9" }

[profile.release-client-lto]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = "fat"
