[package]
name = "zkopml-zk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
candle-core.workspace = true
candle-onnx.workspace = true
rs_merkle.workspace = true
serde_json.workspace = true
sp1-zkvm.workspace = true

sha2.workspace = true

zkopml-ml.workspace = true
